# autoIkabot

./: .gitignore  CLAUDE.md  IMPLEMENTATION_ROADMAP.md  OPERATIONAL_CONTRACT.md  PLAN.md  README.md  featureadditionRTMplan.md  ikariam_attributes.md  main.py  pyproject.toml  resourcetransportmanagerplan.md  v0.7  v0.7.1  v0.7.2  v0.7.3  v0.7.8  v0.8.0  v0.8.2  wiki_Buildings _ Ikariam _ Fandom.html
autoIkabot/: __init__.py  __main__.py  config.py
autoIkabot/core/: __init__.py  captcha_handler.py  dns_resolver.py  login.py  token_handler.py
autoIkabot/data/: __init__.py  account_store.py  user_agents.json
autoIkabot/helpers/: __init__.py  formatting.py  game_parser.py  game_state.py  naval.py  routing.py
autoIkabot/modules/: __init__.py  activateMiracle.py  autoLoader.py  constructionManager.py  dailyTasks.py  externalModules.py  getStatus.py  importExportCookie.py  killTasks.py  notificationSetup.py  resourceTransportManager.py  spyTool.py  taskStatus.py  viewLogs.py  webServer.py
autoIkabot/notifications/: __init__.py  base.py  discord.py  manager.py  notify.py  ntfy.py  storage.py  telegram.py
autoIkabot/ui/: __init__.py  accounts_ui.py  menu.py  prompts.py
autoIkabot/utils/: __init__.py  crypto.py  locks.py  logging.py  process.py
autoIkabot/web/: __init__.py  game_mirror.py  session.py
ikabot_module/: README.md  command_line.patch
reference/fullikabot/ikabot-7.2.5/ikabot/function/: resourceTransportManager.py
tests/: test_phase7_regression_basics.py
